objects/cmo_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cardio Messenger Orders</label>
</CustomObject>